cosmetic patches, page in progress

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="row text-center m-2">
                     <div class="col-xs-12 col-sm-12 col-md-10 offset-md-1">
-                        <p class="text-biography text-muted">Interesuje się informatyką, zagadnieniami technologicznymi, zaś programowanie towarzyszy mi od pewnego czasu. Jestem osobą sumienną, pracowitą, posiadającą determinację w dążeniu do obranego celu. W moich projektach staram się pisać czytelny kod. Programowanie uczy mnie cierpliwości, dokładności, jak i logicznego myślenia.</p>
+                        <p class="text-biography text-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatibus omnis officiis recusandae totam! Quo, tempore alias cum, praesentium temporibus ad animi repellendus suscipit ut, amet expedita minus! Suscipit recusandae iure beatae quo. Impedit, debitis! Natus debitis veniam minus id dignissimos unde. Harum quisquam reiciendis dignissimos sint in tenetur doloremque minus quos atque ipsam nemo maxime ipsa, similique veritatis corrupti ducimus voluptas ab sequi sit quo iste? Distinctio optio esse fugiat adipisci eius hic, ducimus temporibus quibusdam corrupti eveniet natus beatae voluptatem, veniam, facilis laborum! Quasi nemo voluptatem eligendi, sit, saepe repellat voluptatibus cupiditate at molestiae in ut, optio ea!</p>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-10 offset-md-1">
                         <p class="text-biography text-muted"></p>
@@ -157,8 +157,8 @@
                         <div class="mask rgba-white-slight"></div>
                     </div>
                     <div class="card-body">
-                        <h4 class="card-title"></h4>
-                        <p class="card-text"></p>
+                        <h4 class="card-title">lorem</h4>
+                        <p class="card-text">lorem</p>
                         <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="" target="_blank">Live</a></button>
                         <button type="button" class="btn-code"><a class="link-code" href="" target="_blank">Code</a></button>
                     </div>
@@ -176,7 +176,7 @@
                 <div class="col-12">
                     <h4>Sylwester Srokosz</h4>
                     <p><i class="fa fa-send mr-1" aria-hidden="true"></i>sylwester.srokosz@gmail.com</p>
-                    <p><i class="fa fa-phone mr-1" aria-hidden="true"></i> tel.510-788-616</p>
+                    <p><i class="fa fa-phone mr-1" aria-hidden="true"></i> tel. 510-788-616</p>
                 </div>
                 <div class="col-12">
                     <a href="https://www.facebook.com/sylwester.srokosz" target="_blank"><img src="img/icon-facebook.png" alt="Facebook" class="animated pulse"></a>
