projects card update, some little style fixed

--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
                     <div class="col-lg-3 col-sm-6 col-xs-12"><img src="img/gulp.png" width="150" heigth="150" data-toggle="tooltip" data-placement="top" title="Git - Gulp.js to, oparty o platformę Node.js, system do automatyzacji pracy."></div>
                     <div class="col-lg-3 col-sm-6 col-xs-12"><img src="img/ubuntu.png" width="150" heigth="150" data-toggle="tooltip" data-placement="top" title="Git - Gulp.js to, oparty o platformę Node.js, system do automatyzacji pracy."></div>
             </div>
+            <div class="row text-center">
+                <div class="col-lg-3 col-sm-6 col-xs-12"><img src="img/vsc.png" width="200" heigth="200" data-toggle="tooltip" data-placement="top" title="Git - Rozproszony system kontroli wersji."></div>
+                <div class="col-lg-3 col-sm-6 col-xs-12"><img src="img/yarn.png" width="200" heigth="200" data-toggle="tooltip" data-placement="top" title="jQuery – lekka biblioteka programistyczna dla języka JavaScript"></div>
+                <div class="col-lg-3 col-sm-6 col-xs-12"><img src="img/webpack.png" width="200" heigth="200" data-toggle="tooltip" data-placement="top" title="Git - Gulp.js to, oparty o platformę Node.js, system do automatyzacji pracy."></div>
+                <div class="col-lg-3 col-sm-6 col-xs-12"><img src="img/parcel.png" width="300" heigth="300" data-toggle="tooltip" data-placement="top" title="Git - Gulp.js to, oparty o platformę Node.js, system do automatyzacji pracy."></div>
+        </div>
         </div>
     </section>
     <hr>
@@ -96,7 +102,7 @@
         <div class="container">
             <div class="card-deck">
                 <div class="card mb-4">
-                    <div class="view overlay"><img class="img-fluid" src="" alt="Card image cap">
+                    <div class="view overlay"><img class="img-fluid" src="img/project1.png" alt="Card image cap">
                         <div class="mask rgba-white-slight"></div>
                     </div>
                     <div class="card-body">
@@ -107,7 +113,7 @@
                     </div>
                 </div>
                 <div class="card mb-4">
-                    <div class="view overlay"><img class="img-fluid" src="" alt="Card image cap">
+                    <div class="view overlay"><img class="img-fluid" src="img/project2.png" alt="Card image cap">
                         <div class="mask rgba-white-slight"></div>
                     </div>
                     <div class="card-body">
@@ -118,7 +124,7 @@
                     </div>
                 </div>
                 <div class="card mb-4">
-                    <div class="view overlay"><img class="img-fluid" src="" alt="Card image cap">
+                    <div class="view overlay"><img class="img-fluid" src="img/project3.png" alt="Card image cap">
                         <div class="mask rgba-white-slight"></div>
                     </div>
                     <div class="card-body">
@@ -131,7 +137,7 @@
             </div>
             <div class="card-deck">
                 <div class="card mb-4">
-                    <div class="view overlay"><img class="img-fluid" src="" alt="">
+                    <div class="view overlay"><img class="img-fluid" src="img/project4.png" alt="">
                         <div class="mask rgba-white-slight"></div>
                     </div>
                     <div class="card-body">
@@ -142,7 +148,7 @@
                     </div>
                 </div>
                 <div class="card mb-4">
-                    <div class="view overlay"><img class="img-fluid" src="img/playlist.png" alt="Card image cap">
+                    <div class="view overlay"><img class="img-fluid" src="img/project5.png" alt="Card image cap">
                         <div class="mask rgba-white-slight"></div>
                     </div>
                     <div class="card-body">
@@ -153,7 +159,31 @@
                     </div>
                 </div>
                 <div class="card mb-4">
-                    <div class="view overlay"><img class="img-fluid" src="img/dice.png" alt="Card image cap">
+                    <div class="view overlay"><img class="img-fluid" src="img/project6.png" alt="Card image cap">
+                        <div class="mask rgba-white-slight"></div>
+                    </div>
+                    <div class="card-body">
+                        <h4 class="card-title">lorem</h4>
+                        <p class="card-text">lorem</p>
+                        <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="" target="_blank">Live</a></button>
+                        <button type="button" class="btn-code"><a class="link-code" href="" target="_blank">Code</a></button>
+                    </div>
+                </div>
+            </div>
+            <div class="card-deck">
+                <div class="card mb-6">
+                    <div class="view overlay"><img class="img-fluid" src="img/project7.png" alt="">
+                        <div class="mask rgba-white-slight"></div>
+                    </div>
+                    <div class="card-body">
+                        <h4 class="card-title">lorem</h4>
+                        <p class="card-text">lorem</p>
+                        <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="" target="_blank">Live</a></button>
+                        <button type="button" class="btn-code"><a class="link-code" href="" target="_blank" target="_blank">Code</a></button>
+                    </div>
+                </div>
+                <div class="card mb-6">
+                    <div class="view overlay"><img class="img-fluid" src="img/project8.png" alt="Card image cap">
                         <div class="mask rgba-white-slight"></div>
                     </div>
                     <div class="card-body">
