projects descriptions and title well done!

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                         <div class="mask rgba-white-slight"></div>
                     </div>
                     <div class="card-body">
-                        <h4 class="card-title">lorem</h4>
-                        <p class="card-text">lorem</p>
+                        <h4 class="card-title">Example layout</h4>
+                        <p class="card-text">Website with large slider, RWD and flexbox CSS, google fonts - Lato, favicons, loading pageheader, slider, img files from - unsplash.it, popup window ,gallery, icon from - ionicons.com</p>
                         <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="" target="_blank">Live</a></button>
                         <button type="button" class="btn-code"><a class="link-code" href="" target="_blank">Code</a></button>
                     </div>
@@ -117,8 +117,8 @@
                         <div class="mask rgba-white-slight"></div>
                     </div>
                     <div class="card-body">
-                        <h4 class="card-title">lorem</h4>
-                        <p class="card-text">lorem</p>
+                        <h4 class="card-title">Montserrat Matrix</h4>
+                        <p class="card-text">Title of project genarated from Faker(extension in Visual Studio Code).Example website building with Bootstrap version 4, used technology: HTML, SASS(mixins, variables, nesting), I used GULP to automate tasks.</p>
                         <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="" target="_blank">Live</a></button>
                         <button type="button" class="btn-code"><a class="link-code" href="" target="_blank">Code</a></button>
                     </div>
@@ -128,8 +128,8 @@
                         <div class="mask rgba-white-slight"></div>
                     </div>
                     <div class="card-body">
-                        <h4 class="card-title">lorem</h4>
-                        <p class="card-text">lorem</p>
+                        <h4 class="card-title">Bootstrap 3 layout</h4>
+                        <p class="card-text">Simply one page website with animate.css style, icons, slider, automatic scroll navigaton, two types of popup windows gallery and contact form.</p>
                         <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="" target="_blank">Live</a></button>
                         <button type="button" class="btn-code"><a class="link-code" href="" target="_blank">Code</a></button>
                     </div>
@@ -141,8 +141,8 @@
                         <div class="mask rgba-white-slight"></div>
                     </div>
                     <div class="card-body">
-                        <h4 class="card-title">lorem</h4>
-                        <p class="card-text">lorem</p>
+                        <h4 class="card-title">StarWars SPA</h4>
+                        <p class="card-text">Very simply SPA aplication in Vue.js with routers and public API, I wanted to try download the data and view it using a Bootstrap version 4. SPA generate three planets and characters for StarWars. </p>
                         <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="" target="_blank">Live</a></button>
                         <button type="button" class="btn-code"><a class="link-code" href="" target="_blank" target="_blank">Code</a></button>
                     </div>
@@ -152,8 +152,8 @@
                         <div class="mask rgba-white-slight"></div>
                     </div>
                     <div class="card-body">
-                        <h4 class="card-title">lorem</h4>
-                        <p class="card-text">lorem</p>
+                        <h4 class="card-title">MemoryCards game</h4>
+                        <p class="card-text">MemoryCards is a retro game written in JavaScript, 36 pairs, 18 class colours, You have a 3 sec remaining to start game. Remember the position of colors.</p>
                         <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="" target="_blank">Live</a></button>
                         <button type="button" class="btn-code"><a class="link-code" href="" target="_blank">Code</a></button>
                     </div>
@@ -163,8 +163,8 @@
                         <div class="mask rgba-white-slight"></div>
                     </div>
                     <div class="card-body">
-                        <h4 class="card-title">lorem</h4>
-                        <p class="card-text">lorem</p>
+                        <h4 class="card-title">Counters - Vue.js component</h4>
+                        <p class="card-text">It's my first contact with Vue.js and the first component.</p>
                         <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="" target="_blank">Live</a></button>
                         <button type="button" class="btn-code"><a class="link-code" href="" target="_blank">Code</a></button>
                     </div>
@@ -176,8 +176,8 @@
                         <div class="mask rgba-white-slight"></div>
                     </div>
                     <div class="card-body">
-                        <h4 class="card-title">lorem</h4>
-                        <p class="card-text">lorem</p>
+                        <h4 class="card-title">ToDO - JavaScript</h4>
+                        <p class="card-text">SPA in JavaScript, add, delete buttons and input text area, that's all.</p>
                         <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="" target="_blank">Live</a></button>
                         <button type="button" class="btn-code"><a class="link-code" href="" target="_blank" target="_blank">Code</a></button>
                     </div>
@@ -187,8 +187,8 @@
                         <div class="mask rgba-white-slight"></div>
                     </div>
                     <div class="card-body">
-                        <h4 class="card-title">lorem</h4>
-                        <p class="card-text">lorem</p>
+                        <h4 class="card-title">szybkiMazak - Vue.js</h4>
+                        <p class="card-text">SPA aplication like a todo, I used Vue.js</p>
                         <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="" target="_blank">Live</a></button>
                         <button type="button" class="btn-code"><a class="link-code" href="" target="_blank">Code</a></button>
                     </div>
