--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <div class="col-12">
                     <h4>Sylwester Srokosz</h4>
                     <p><i class="fa fa-send mr-1" aria-hidden="true"></i>sylwester.srokosz@gmail.com</p>
-                    <a href="+48510788616" class="footer-item"<p><i class="fa fa-phone mr-1" aria-hidden="true"></i>tel. 510-788-616</p></a>
+                    <a href="tel:+48510788616" class="footer-item"<p><i class="fa fa-phone mr-1" aria-hidden="true"></i>tel. 510-788-616</p></a>
                 </div>
                 <div class="col-12">
                     <a href="https://www.facebook.com/sylwester.srokosz" target="_blank"><img src="img/icon-facebook.png" alt="Facebook" class="animated pulse"></a>
