--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <div class="row text-center">
                 <div class="col-12">
                     <h4>Sylwester Srokosz</h4>
-                    <p><i class="fa fa-send mr-1" aria-hidden="true"></i>sylwester.srokosz@gmail.com</p>
+                    <a href="mailto:sylwester.srokosz@gmail.com" class="footer-item"<p><i class="fa fa-send mr-1" aria-hidden="true"></i>sylwester.srokosz@gmail.com</p></a>
                     <a href="tel:+48-510-788-616" class="footer-item"<p><i class="fa fa-phone mr-1" aria-hidden="true"></i>tel. 510-788-616</p></a>
                 </div>
                 <div class="col-12">
