projects link update

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                     <div class="card-body">
                         <h4 class="card-title">Montserrat Matrix</h4>
                         <p class="card-text">Title of project genarated from Faker(extension in Visual Studio Code).Example website building with Bootstrap version 4, used technology: HTML, SASS(mixins, variables, nesting), I used GULP to automate tasks.</p>
-                        <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="" target="_blank">Live</a></button>
-                        <button type="button" class="btn-code"><a class="link-code" href="" target="_blank">Code</a></button>
+                        <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="https://sylwuchaa.github.io/website-with-large-slider-RWD-and-flexbox-CSS/" target="_blank">Live</a></button>
+                        <button type="button" class="btn-code"><a class="link-code" href="https://github.com/Sylwuchaa/website-with-large-slider-RWD-and-flexbox-CSS" target="_blank">Code</a></button>
                     </div>
                 </div>
                 <div class="card mb-4">
@@ -130,8 +130,8 @@
                     <div class="card-body">
                         <h4 class="card-title">Bootstrap 3 layout</h4>
                         <p class="card-text">Simply one page website with animate.css style, icons, slider, automatic scroll navigaton, two types of popup windows gallery and contact form.</p>
-                        <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="" target="_blank">Live</a></button>
-                        <button type="button" class="btn-code"><a class="link-code" href="" target="_blank">Code</a></button>
+                        <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="https://sylwuchaa.github.io/bootstrap3_website_lern/#" target="_blank">Live</a></button>
+                        <button type="button" class="btn-code"><a class="link-code" href="https://github.com/Sylwuchaa/bootstrap3_website_lern" target="_blank">Code</a></button>
                     </div>
                 </div>
             </div>
@@ -143,8 +143,8 @@
                     <div class="card-body">
                         <h4 class="card-title">StarWars SPA</h4>
                         <p class="card-text">Very simply SPA aplication in Vue.js with routers and public API, I wanted to try download the data and view it using a Bootstrap version 4. SPA generate three planets and characters for StarWars. </p>
-                        <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="" target="_blank">Live</a></button>
-                        <button type="button" class="btn-code"><a class="link-code" href="" target="_blank" target="_blank">Code</a></button>
+                        <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="https://sylwuchaa.github.io/Router-API-StarWars-SPA-vue.js/" target="_blank">Live</a></button>
+                        <button type="button" class="btn-code"><a class="link-code" href="https://github.com/Sylwuchaa/Router-API-StarWars-SPA-vue.js" target="_blank" target="_blank">Code</a></button>
                     </div>
                 </div>
                 <div class="card mb-4">
@@ -154,8 +154,8 @@
                     <div class="card-body">
                         <h4 class="card-title">MemoryCards game</h4>
                         <p class="card-text">MemoryCards is a retro game written in JavaScript, 36 pairs, 18 class colours, You have a 3 sec remaining to start game. Remember the position of colors.</p>
-                        <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="" target="_blank">Live</a></button>
-                        <button type="button" class="btn-code"><a class="link-code" href="" target="_blank">Code</a></button>
+                        <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="https://sylwuchaa.github.io/js.memoryGame/" target="_blank">Live</a></button>
+                        <button type="button" class="btn-code"><a class="link-code" href="https://github.com/Sylwuchaa/js.memoryGame" target="_blank">Code</a></button>
                     </div>
                 </div>
                 <div class="card mb-4">
@@ -165,8 +165,8 @@
                     <div class="card-body">
                         <h4 class="card-title">Counters - Vue.js component</h4>
                         <p class="card-text">It's my first contact with Vue.js and the first component.</p>
-                        <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="" target="_blank">Live</a></button>
-                        <button type="button" class="btn-code"><a class="link-code" href="" target="_blank">Code</a></button>
+                        <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="https://github.com/Sylwuchaa/vue.js_first_component" target="_blank">Live</a></button>
+                        <button type="button" class="btn-code"><a class="link-code" href="https://sylwuchaa.github.io/vue.js_first_component/" target="_blank">Code</a></button>
                     </div>
                 </div>
             </div>
@@ -179,7 +179,7 @@
                         <h4 class="card-title">ToDO - JavaScript</h4>
                         <p class="card-text">SPA in JavaScript, add, delete buttons and input text area, that's all.</p>
                         <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="" target="_blank">Live</a></button>
-                        <button type="button" class="btn-code"><a class="link-code" href="" target="_blank" target="_blank">Code</a></button>
+                        <button type="button" class="btn-code"><a class="link-code" href="https://github.com/Sylwuchaa/todo_js" target="_blank" target="_blank">Code</a></button>
                     </div>
                 </div>
                 <div class="card mb-6">
@@ -189,8 +189,8 @@
                     <div class="card-body">
                         <h4 class="card-title">szybkiMazak - Vue.js</h4>
                         <p class="card-text">SPA aplication like a todo, I used Vue.js</p>
-                        <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="" target="_blank">Live</a></button>
-                        <button type="button" class="btn-code"><a class="link-code" href="" target="_blank">Code</a></button>
+                        <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="https://sylwuchaa.github.io/szybkiMazak-vue.js/" target="_blank">Live</a></button>
+                        <button type="button" class="btn-code"><a class="link-code" href="https://github.com/Sylwuchaa/szybkiMazak-vue.js" target="_blank">Code</a></button>
                     </div>
                 </div>
             </div>
