projects link update

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <div class="card-body">
                         <h4 class="card-title">ToDO - JavaScript</h4>
                         <p class="card-text">SPA in JavaScript, add, delete buttons and input text area, that's all.</p>
-                        <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="" target="_blank">Live</a></button>
+                        <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="https://sylwuchaa.github.io/livepreview_todo/" target="_blank">Live</a></button>
                         <button type="button" class="btn-code"><a class="link-code" href="https://github.com/Sylwuchaa/todo_js" target="_blank" target="_blank">Code</a></button>
                     </div>
                 </div>
