--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section id="about">
         <div class="container">
             <div class="row text-center">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 offset-lg-2 img--block"><img src="img/small_avatar.jpg" class="z-depth-1 rounded-circle" width="250px"></div>
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 offset-lg-2 img--block"><img src="img/small_avatar.jpg" class="z-depth-1 rounded-circle" width="200px"></div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 offset-lg-0">
                     <br>
                     <h5 class="wow fadeIn" data-wow-delay=".5s"><span class=logo-dot>&lt;</span> HelloWorld <span class=logo-dot> /&gt;</span> I'm<br></h5>
@@ -219,7 +219,7 @@
     <!----------End Section Contact---------->
     <!--Section Footer-->
     <footer>
-        <p class="text-center">&copy; Sylwester Srokosz 2018</p>
+        <p class="text-center">&copy; Sylwester Srokosz 2018 </p>
     </footer>
     <!----------End Section Footer---------->
     <!--Section Scripts-->
@@ -227,7 +227,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.0/js/mdb.min.js"></script>
-    <script src="js/app.min.js"></script>>
+    <script src="js/app.min.js"></script>
     <script>
         new WOW().init();
     </script>
