--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
                     <div class="card-body">
                         <h4 class="card-title">Counters - Vue.js component</h4>
                         <p class="card-text">It's my first contact with Vue.js and the first component.</p>
-                        <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="https://github.com/Sylwuchaa/vue.js_first_component" target="_blank">Live</a></button>
-                        <button type="button" class="btn-code"><a class="link-code" href="https://sylwuchaa.github.io/vue.js_first_component/" target="_blank">Code</a></button>
+                        <button type="button" class="btn btn-grey darken-3 btn-md"><a class="live" href="https://sylwuchaa.github.io/vue.js_first_component/" target="_blank">Live</a></button>
+                        <button type="button" class="btn-code"><a class="link-code" href="https://github.com/Sylwuchaa/vue.js_first_component" target="_blank">Code</a></button>
                     </div>
                 </div>
             </div>
